fixed sizing on mobile, added requested video scrolling feature (when there are more than one video)

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   gap: 1rem;
 }
 
+@media (max-width: 512px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -56,7 +62,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  padding-inline: 8rem;
+  padding-inline: 3rem;
 }
 .door-container-wrapper::before {
   content: "<";
@@ -190,9 +196,17 @@
 .main-section > .title {
   position: absolute;
   color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+  border: 2px solid #1e1e1e47;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
+  backdrop-filter: blur(4px);
   font-size: 2rem;
+  pointer-events: none;
   font-weight: 800;
-  bottom: 3rem;
+  bottom: 5rem;
 }
 .main-section.clicked {
   scale: 10;
@@ -203,39 +217,42 @@
 }
 
 .videos-container {
-  justify-content: center;
-  align-items: center;
   padding: 0rem;
   display: flex;
-  overflow: hidden;
   flex-direction: column;
   width: 100vw;
   height: 100vh;
   gap: 2rem;
   padding: 2rem;
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 button.back {
-  top: 0;
-  left: 0;
+  position: fixed;
+  bottom: 0.5rem;
+  left: 50%;
+  translate: -50%;
 }
 iframe {
-  aspect-ratio: 16/9;
+  width: 100%;
   height: 100%;
+  border-radius: 1rem;
   background-color: black;
 }
 
 .videos-horizontal {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  overflow-x: scroll;
   gap: 2rem;
 }
 .videos-horizontal.dual {
-  height: 50%;
+  height: 100%;
+  width: 200%;
 }
 
 button.fullscreen {
